welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:9: error: illegal start of simple expression
}
^blueTicket:13: error: illegal start of simple expression
} 
^